default migration and seeder

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DATABASE_USERNAME=''
 DATABASE_PASSWORD=''
 DATABASE_NAME='dev'
 DATABASE_SYNC=false
+
+
+# JWT
+AUTH_JWT_ACCESS_EXPIRES_IN=''
+AUTH_JWT_REFRESH_EXPIRES_IN=''
+AUTH_JWT_RESET_PASSWORD_EXPIRES_IN=''
